--- a/drupal/profiles/takepart/themes/takepart3/css/old_style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/old_style.css
@@ -1246,7 +1246,7 @@ div.takepart_addthis_leftpanel {
 div.takepart_addthis_leftpanel div.addthis_toolbox a {
     width: 100%;
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
 div.takepart_addthis_leftpanel div.addthis_toolbox {
@@ -1263,14 +1263,6 @@ div.takepart_addthis_footer {
 
 div.takepart_addthis_footer a {
     margin-left: 3px;
-}
-
-div.takepart_addthis_footer span#addthis_footer_sharethis {
-    padding-top: 6px;
-    margin-right: 10px;
-    color: #BBB;
-    float: right;
-    font-size: 1.2em;
 }
 
 div.takepart_addthis_footer div.buttons {
@@ -1858,15 +1850,10 @@ h2.title a{
 }
 
 .embed-action-wrapper {
-    /* background: transparent url(../images/take-action-embed.png) left center no-repeat; */
     border:4px solid #FFE789;
     margin: 9px 0 25px 0;
     padding: 8px 10px;
-}
-
-.embed-action-wrapper .embed-action {
-    /* padding-left: 168px; */
-    /*width: 280px;*/
+    background-color: #FFF;
 }
 
 .embed-action-wrapper .embed-action table {
