--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -1191,7 +1191,7 @@ h1.title a:hover {
     font-size: 14px;
     font-weight: bold;
     height: 0;
-    left: -55px;
+    left: -68px;
     overflow: visible;
     position: relative;
 }
